# SIK-Telnet-Radio

./: .gitignore  CMakeLists.txt  Makefile  README.md  err.txt  receiver.cc  run-receiver.sh  run-sender.sh  sender.cc  task_description.md  task_description_pt1.md  task_description_pt2.md
common/: audio_packet.h  audio_packet.hh  buffer.c  buffer.h  endian.h  err.c  err.h
receiver/: main.cc  receiver.cc  receiver.hh
sender/: main.cc  sender.cc  sender.hh
src/: receiver.cc  sender.cc
src/common/: circular_buffer.cc  circular_buffer.hh  datagram.cc  datagram.hh  endian.hh  err.cc  err.hh  event_pipe.cc  event_pipe.hh  event_queue.cc  event_queue.hh  except.cc  except.hh  log.cc  log.hh  net.cc  net.hh  ptr.cc  radio_station.cc  radio_station.hh  synced_ptr.hh  tcp_socket.cc  tcp_socket.hh  udp_socket.cc  udp_socket.hh  worker.cc  worker.hh
src/receiver/: audio_printer.cc  audio_printer.hh  audio_receiver.cc  audio_receiver.hh  client_manager.cc  client_manager.hh  lookup_receiver.cc  lookup_receiver.hh  lookup_sender.cc  lookup_sender.hh  receiver.cc  receiver_params.hh  rexmit_sender.cc  rexmit_sender.hh  station_remover.cc  station_remover.hh  tcp_client_handler.cc  tcp_client_handler.hh  tcp_server.cc  tcp_server.hh  ui.hh  ui_menu.cc  ui_menu.hh
src/sender/: audio_sender.cc  audio_sender.hh  controller.cc  controller.hh  retransmitter.cc  retransmitter.hh  sender.cc  sender_params.hh
src/utils/: alloc.cc  alloc.hh  audio_packet.cc  audio_packet.hh  buffer.cc  buffer.hh  cyclical_buffer.cc  cyclical_buffer.hh  endian.hh  err.cc  err.hh  mem.cc  mem.hh  net.cc  net.hh
test-scripts/: run-receiver.sh  run-sender.sh
